# rocket_cmd_bug

./: Cargo.toml  README.md
src/: main.rs
